src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__upsample_nearest_exact3d_backward(value grad_output, value output_size, value input_size, value scales_d, value scales_h, value scales_w);
value atg__upsample_nearest_exact3d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales_d, value scales_h, value scales_w);
value atg__upsample_nearest_exact3d_out(value out, value self, value output_size, value scales_d, value scales_h, value scales_w);
value atg__upsample_nearest_exact3d_vec(value input, value output_size, value scale_factors);
value atg__use_cudnn_ctc_loss(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank);
value atg__use_cudnn_ctc_loss_tensor(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank);
value atg__use_cudnn_rnn_flatten_weight();
void atg__validate_compressed_sparse_indices(int is_crow, value compressed_idx, value plain_idx, int64_t cdim, int64_t dim, int64_t nnz);
void atg__validate_sparse_bsc_tensor_args(value ccol_indices, value row_indices, value values, value size);
void atg__validate_sparse_bsr_tensor_args(value crow_indices, value col_indices, value values, value size);
void atg__validate_sparse_csc_tensor_args(value ccol_indices, value row_indices, value values, value size);
value atg__values(value self);
value atg__values_copy(value self);
value atg__values_copy_out(value out, value self);
value atg__version(value self);
value atg__weight_int4pack_mm(value self, value mat2, int64_t qGroupSize, value qScaleAndZeros);
value atg__weight_int4pack_mm_for_cpu(value self, value mat2, int64_t qGroupSize, value qScaleAndZeros);
value atg__weight_int8pack_mm(value self, value mat2, value scales);
value atg__weight_norm(value v, value g, int64_t dim);
value atg__weight_norm_differentiable_backward(value grad_w, value saved_v, value saved_g, value saved_norms, int64_t dim);
value atg__weight_norm_interface(value v, value g, int64_t dim);
value atg__weight_norm_interface_backward(value grad_w, value saved_v, value saved_g, value saved_norms, int64_t dim);
value atg__weight_norm_interface_backward_out(value out0, value out1, value grad_w, value saved_v, value saved_g, value saved_norms, int64_t dim);
value atg__weight_norm_interface_out(value out0, value out1, value v, value g, int64_t dim);
value atg__wrapped_linear_prepack(value weight, value weight_scale, value weight_zero_point, value bias);
value atg__wrapped_quantized_linear_prepacked(value input, value input_scale, value input_zero_point, value packed_weight, value output_scale, value output_zero_point, int64_t out_channel);
value atg_abs(value self);
value atg_abs_(value self);
value atg_abs_out(value out, value self);
value atg_absolute(value self);
value atg_absolute_(value self);
value atg_absolute_out(value out, value self);
value atg_acos(value self);
value atg_acos_(value self);
value atg_acos_out(value out, value self);
value atg_acosh(value self);
value atg_acosh_(value self);
value atg_acosh_out(value out, value self);
value atg_adaptive_avg_pool1d(value self, value output_size);
value atg_adaptive_avg_pool1d_out(value out, value self, value output_size);
value atg_adaptive_avg_pool2d(value self, value output_size);
value atg_adaptive_avg_pool2d_out(value out, value self, value output_size);
value atg_adaptive_avg_pool3d(value self, value output_size);
value atg_adaptive_avg_pool3d_backward(value grad_input, value grad_output, value self);
value atg_adaptive_avg_pool3d_out(value out, value self, value output_size);
value atg_adaptive_max_pool1d(value self, value output_size);
value atg_adaptive_max_pool2d(value self, value output_size);
value atg_adaptive_max_pool2d_backward(value grad_output, value self, value indices);
value atg_adaptive_max_pool2d_backward_grad_input(value grad_input, value grad_output, value self, value indices);
value atg_adaptive_max_pool2d_out(value out, value indices, value self, value output_size);
value atg_adaptive_max_pool3d(value self, value output_size);
value atg_adaptive_max_pool3d_backward(value grad_output, value self, value indices);
value atg_adaptive_max_pool3d_backward_grad_input(value grad_input, value grad_output, value self, value indices);
value atg_adaptive_max_pool3d_out(value out, value indices, value self, value output_size);
value atg_add(value self, value other, value alpha);
value atg_add_(value self, value other, value alpha);
value atg_add_out(value out, value self, value other, value alpha);
value atg_add_scalar(value self, value other, value alpha);
value atg_add_scalar_(value self, value other, value alpha);
value atg_add_scalar_out(value out, value self, value other, value alpha);
value atg_addbmm(value self, value batch1, value batch2, value beta, value alpha);
value atg_addbmm_(value self, value batch1, value batch2, value beta, value alpha);
value atg_addbmm_out(value out, value self, value batch1, value batch2, value beta, value alpha);
value atg_addcdiv(value self, value tensor1, value tensor2, value value_);
value atg_addcdiv_(value self, value tensor1, value tensor2, value value_);
value atg_addcdiv_out(value out, value self, value tensor1, value tensor2, value value_);
value atg_addcmul(value self, value tensor1, value tensor2, value value_);
value atg_addcmul_(value self, value tensor1, value tensor2, value value_);
value atg_addcmul_out(value out, value self, value tensor1, value tensor2, value value_);
value atg_addmm(value self, value mat1, value mat2, value beta, value alpha);