src/bindings/torch_bindings_generated1.ml


  let stubs__upsample_nearest_exact3d_backward =
    foreign
      "atg__upsample_nearest_exact3d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact3d_backward_grad_input =
    foreign
      "atg__upsample_nearest_exact3d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact3d_out =
    foreign
      "atg__upsample_nearest_exact3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact3d_vec =
    foreign
      "atg__upsample_nearest_exact3d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs__use_cudnn_ctc_loss =
    foreign
      "atg__use_cudnn_ctc_loss"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning bool)
  ;;

  let stubs__use_cudnn_ctc_loss_tensor =
    foreign
      "atg__use_cudnn_ctc_loss_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning bool)
  ;;

  let stubs__use_cudnn_rnn_flatten_weight =
    foreign "atg__use_cudnn_rnn_flatten_weight" (void @-> returning bool)
  ;;

  let stubs__validate_compressed_sparse_indices =
    foreign
      "atg__validate_compressed_sparse_indices"
      (int
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__validate_sparse_bsc_tensor_args =
    foreign
      "atg__validate_sparse_bsc_tensor_args"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs__validate_sparse_bsr_tensor_args =
    foreign
      "atg__validate_sparse_bsr_tensor_args"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs__validate_sparse_csc_tensor_args =
    foreign
      "atg__validate_sparse_csc_tensor_args"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs__values = foreign "atg__values" (gc_tensor @-> returning raw_tensor)
  let stubs__values_copy = foreign "atg__values_copy" (gc_tensor @-> returning raw_tensor)

  let stubs__values_copy_out =
    foreign "atg__values_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__version = foreign "atg__version" (gc_tensor @-> returning int64_t)

  let stubs__weight_int4pack_mm =
    foreign
      "atg__weight_int4pack_mm"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__weight_int4pack_mm_for_cpu =
    foreign
      "atg__weight_int4pack_mm_for_cpu"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__weight_int8pack_mm =
    foreign
      "atg__weight_int8pack_mm"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__weight_norm =
    foreign
      "atg__weight_norm"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__weight_norm_differentiable_backward =
    foreign
      "atg__weight_norm_differentiable_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__weight_norm_interface =
    foreign
      "atg__weight_norm_interface"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs__weight_norm_interface_backward =
    foreign
      "atg__weight_norm_interface_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__weight_norm_interface_backward_out =
    foreign
      "atg__weight_norm_interface_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__weight_norm_interface_out =
    foreign
      "atg__weight_norm_interface_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__wrapped_linear_prepack =
    foreign
      "atg__wrapped_linear_prepack"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__wrapped_quantized_linear_prepacked =
    foreign
      "atg__wrapped_quantized_linear_prepacked"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_abs = foreign "atg_abs" (gc_tensor @-> returning raw_tensor)
  let stubs_abs_ = foreign "atg_abs_" (gc_tensor @-> returning raw_tensor)

  let stubs_abs_out =
    foreign "atg_abs_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_absolute = foreign "atg_absolute" (gc_tensor @-> returning raw_tensor)
  let stubs_absolute_ = foreign "atg_absolute_" (gc_tensor @-> returning raw_tensor)

  let stubs_absolute_out =
    foreign "atg_absolute_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_acos = foreign "atg_acos" (gc_tensor @-> returning raw_tensor)
  let stubs_acos_ = foreign "atg_acos_" (gc_tensor @-> returning raw_tensor)

  let stubs_acos_out =
    foreign "atg_acos_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_acosh = foreign "atg_acosh" (gc_tensor @-> returning raw_tensor)
  let stubs_acosh_ = foreign "atg_acosh_" (gc_tensor @-> returning raw_tensor)

  let stubs_acosh_out =
    foreign "atg_acosh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool1d =
    foreign
      "atg_adaptive_avg_pool1d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool1d_out =
    foreign
      "atg_adaptive_avg_pool1d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool2d =
    foreign
      "atg_adaptive_avg_pool2d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool2d_out =
    foreign
      "atg_adaptive_avg_pool2d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool3d =
    foreign
      "atg_adaptive_avg_pool3d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool3d_backward =
    foreign
      "atg_adaptive_avg_pool3d_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_avg_pool3d_out =
    foreign
      "atg_adaptive_avg_pool3d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_adaptive_max_pool1d =
    foreign
      "atg_adaptive_max_pool1d"
      (ptr raw_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs_adaptive_max_pool2d =
    foreign
      "atg_adaptive_max_pool2d"
      (ptr raw_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs_adaptive_max_pool2d_backward =
    foreign
      "atg_adaptive_max_pool2d_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_max_pool2d_backward_grad_input =
    foreign
      "atg_adaptive_max_pool2d_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_max_pool2d_out =
    foreign
      "atg_adaptive_max_pool2d_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_adaptive_max_pool3d =
    foreign
      "atg_adaptive_max_pool3d"
      (ptr raw_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning void)
  ;;

  let stubs_adaptive_max_pool3d_backward =
    foreign
      "atg_adaptive_max_pool3d_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_max_pool3d_backward_grad_input =
    foreign
      "atg_adaptive_max_pool3d_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_adaptive_max_pool3d_out =
    foreign
      "atg_adaptive_max_pool3d_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_add =
    foreign "atg_add" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_add_ =
    foreign "atg_add_" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_add_out =
    foreign
      "atg_add_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_add_scalar =
    foreign "atg_add_scalar" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_add_scalar_ =
    foreign "atg_add_scalar_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_add_scalar_out =
    foreign
      "atg_add_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_addbmm =
    foreign
      "atg_addbmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addbmm_ =
    foreign
      "atg_addbmm_"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addbmm_out =
    foreign
      "atg_addbmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addcdiv =
    foreign
      "atg_addcdiv"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_addcdiv_ =
    foreign
      "atg_addcdiv_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_addcdiv_out =
    foreign
      "atg_addcdiv_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addcmul =
    foreign
      "atg_addcmul"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_addcmul_ =
    foreign
      "atg_addcmul_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_addcmul_out =
    foreign
      "atg_addcmul_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_addmm =
    foreign
      "atg_addmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;
